midiSequencerInputUnit/Firmware/build/log/idf_py_stdout_output_13924
[1/11] Linking C static library esp-idf/rotaryEncoders/librotaryEncoders.a
[2/11] Building C object esp-idf/switchMatrix/CMakeFiles/__idf_switchMatrix.dir/switchMatrix.c.obj
FAILED: esp-idf/switchMatrix/CMakeFiles/__idf_switchMatrix.dir/switchMatrix.c.obj 
/home/synth002/.espressif/tools/xtensa-esp32s3-elf/esp-2022r1-11.2.0/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc  -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/build/config -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/switchMatrix/include -I/home/synth002/esp/esp-idf-v5.0/components/newlib/platform_include -I/home/synth002/esp/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/include -I/home/synth002/esp/esp-idf-v5.0/components/freertos/esp_additions/include/freertos -I/home/synth002/esp/esp-idf-v5.0/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/synth002/esp/esp-idf-v5.0/components/freertos/esp_additions/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/include/soc -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/include/soc/esp32s3 -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/port/esp32s3/. -I/home/synth002/esp/esp-idf-v5.0/components/esp_hw_support/port/esp32s3/private_include -I/home/synth002/esp/esp-idf-v5.0/components/heap/include -I/home/synth002/esp/esp-idf-v5.0/components/log/include -I/home/synth002/esp/esp-idf-v5.0/components/soc/include -I/home/synth002/esp/esp-idf-v5.0/components/soc/esp32s3/. -I/home/synth002/esp/esp-idf-v5.0/components/soc/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/hal/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/hal/include -I/home/synth002/esp/esp-idf-v5.0/components/hal/platform_port/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_rom/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_rom/include/esp32s3 -I/home/synth002/esp/esp-idf-v5.0/components/esp_rom/esp32s3 -I/home/synth002/esp/esp-idf-v5.0/components/esp_common/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_system/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_system/port/soc -I/home/synth002/esp/esp-idf-v5.0/components/esp_system/port/include/private -I/home/synth002/esp/esp-idf-v5.0/components/xtensa/include -I/home/synth002/esp/esp-idf-v5.0/components/xtensa/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/include/apps -I/home/synth002/esp/esp-idf-v5.0/components/lwip/include/apps/sntp -I/home/synth002/esp/esp-idf-v5.0/components/lwip/lwip/src/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/port/esp32/include -I/home/synth002/esp/esp-idf-v5.0/components/lwip/port/esp32/include/arch -I/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/ledDrivers/include -I/home/synth002/esp/esp-idf-v5.0/components/driver/include -I/home/synth002/esp/esp-idf-v5.0/components/driver/deprecated -I/home/synth002/esp/esp-idf-v5.0/components/driver/esp32s3/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_pm/include -I/home/synth002/esp/esp-idf-v5.0/components/esp_ringbuf/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware=. -fmacro-prefix-map=/home/synth002/esp/esp-idf-v5.0=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/switchMatrix/CMakeFiles/__idf_switchMatrix.dir/switchMatrix.c.obj -MF esp-idf/switchMatrix/CMakeFiles/__idf_switchMatrix.dir/switchMatrix.c.obj.d -o esp-idf/switchMatrix/CMakeFiles/__idf_switchMatrix.dir/switchMatrix.c.obj -c /home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/switchMatrix/switchMatrix.c
/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/switchMatrix/switchMatrix.c:70:1: error: expected identifier or '(' before '{' token
   70 | {
      | ^
/home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/components/switchMatrix/switchMatrix.c:119:18: warning: 'setupSwitchMatrixPins' defined but not used [-Wunused-function]
  119 | static esp_err_t setupSwitchMatrixPins(void)
      |                  ^~~~~~~~~~~~~~~~~~~~~
[3/11] Performing build step for 'bootloader'
[1/1] cd /home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/build/bootloader/esp-idf/esptool_py && /home/synth002/.espressif/python_env/idf5.0_py3.10_env/bin/python /home/synth002/esp/esp-idf-v5.0/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/synth002/Desktop/midiSequencer/midiSequencerInputUnit_Firmware_NimBLEStack/Firmware/build/bootloader/bootloader.bin
Bootloader binary size 0x55d0 bytes. 0x2a30 bytes (33%) free.
ninja: build stopped: subcommand failed.
